# NexumDB

./: .editorconfig  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  ISSUE_17_RESOLUTION.md  README.md  RELEASE_NOTES.md  RELEASE_NOTES_v0.2.0.md  docker-compose.yaml  test_explain_feature.py
.github/workflows/: ci.yml  docker-release.yml
nexum_ai/: TEST_SUMMARY.md  __init__.py  conftest.py  optimizer.py  pytest.ini  requirements-lock.txt  requirements.txt  rl_agent.py  translator.py
nexum_ai/tests/: README.md  __init__.py  test_expensive_ops.py  test_model_manager.py  test_optimizer.py  test_rl_agent.py  test_translator.py
nexum_cli/: Cargo.toml
nexum_cli/src/: main.rs
nexum_core/: Cargo.toml
nexum_core/benches/: executor_bench.rs  filter_bench.rs  sql_bench.rs  storage_bench.rs
nexum_core/src/: lib.rs
nexum_core/src/bridge/: mod.rs
nexum_core/src/cache/: mod.rs
nexum_core/src/executor/: filter.rs  mod.rs
nexum_core/src/sql/: parser.rs  types.rs
tests/: Cargo.toml  integration_test.rs
