[package]
name = "nexum_core"
version = "0.2.0"
edition = "2021"

[dependencies]
sled = { workspace = true }
sqlparser = { workspace = true }
pyo3 = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
