[package]
name = "nexum_core"
version = "0.3.0"
edition = "2021"

[dependencies]
sled = { workspace = true }
sqlparser = { workspace = true }
pyo3 = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
regex = "1.10"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "storage_bench"
harness = false

[[bench]]
name = "sql_bench"
harness = false

[[bench]]
name = "executor_bench"
harness = false

[[bench]]
name = "filter_bench"
harness = false
